--- a/lesson01/inclass/debugging.html
+++ b/lesson01/inclass/debugging.html
@@ -6,33 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script type="text/javascript">
-    myArray = [13,25,10,43,435];
-    for(let i = 0; index < myArray.length -1; index++){
-      console.log(myArray[index]);
-    }
 
-    for(let index = 2; index < myArray.length -1; index++){
-      myArray[index] = myArray[index] + 15;
-    }
-    console.log(myArray + 'Each number should 15 greater than before the loop');
+    const myArray = [13,25,10,43,435];
 
-    var isAbove30 = true;
-    for(let index = 1; index < myArray.length; index++){
-      if(myArray[index] < 30){
-        isAbove30 = false;
-      }
-    }
-    console.log("Every number is above 30 is " + isAbove30);
+    // Replaced for loop with forEach
+    myArray.forEach(function(value){
+      console.log(value);
+    });
 
-    console.log("Creating an array for every number above 50");
-    above50 = [];
-    for(let index = 4; index < myArray.length; index++){
-      if(myArray[index] > 50){
-        iabove50.push(myArray[index])
-      }
-    }
-    console.log("Here is the array for every number above 50 " + above50);
+    // Replaced for loop with map
+    let results = myArray.map(function(value){
+       return value + 15;
+    });
+    console.log(`${results} (Each number should be 15 greater than before the loop)`);
 
+    // Replaced for loop with every
+    let below30 = myArray.every(function(value){
+      return value < 30;
+    })
+    console.log(`Every number is above 30 is ${below30}`);
+
+    // Replaced for loop with filter
+    let over50 = myArray.filter(function(value){
+        return value > 50;
+    });
+    console.log(`Here is the array for every number above 50 = ${over50}`);
+    // Replaced for loop with filter
+    let sum = my
     myArray2 = [13,25,10,43,435];
     let sum = 0;
     for(let index = 0; index < myArray.length + 1; index++){
